--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>  
+     <uses-feature android:name="android.hardware.sensor.gyroscope" android:required="false" />
     <application
         android:label="trebesin_rc_auto"
         android:name="${applicationName}"
