--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>  
     <application
         android:label="trebesin_rc_auto"
-        android:name="${applicationName}"
+        android:name="RC Auto Ovladač"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
