--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />  
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>  
     <application
-        android:label="trebesin_rc_auto"
-        android:name="RC Auto Ovladač"
+        android:label="RC Auto Ovladač"
+        android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
