--- a/.megaignore
+++ b/.megaignore
@@ -20,7 +20,7 @@
 
 # Flutter/Dart/Pub related
 -:*/doc/api/
--:**/ios/Flutter/.last_build_id
+-:*/ios/Flutter/.last_build_id
 -:.dart_tool/
 -:.flutter-plugins
 -:.flutter-plugins-dependencies
@@ -28,7 +28,7 @@
 -:.pub-cache/
 -:.pub/
 -:pubspec.lock
--:/build/
+-:build/
 
 # Symbolication related
 -:app.*.symbols
@@ -37,6 +37,6 @@
 -:app.*.map.json
 
 # Android Studio will place build artifacts here
--:/android/app/debug
--:/android/app/profile
--:/android/app/release
+-:android/app/debug
+-:android/app/profile
+-:android/app/release
