--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   permission_handler: ^11.0.1
   flutter_bluetooth_serial: ^0.4.0
   sensors_plus: ^3.1.0
+  material_symbols_icons: ^4.2706.0
 
 dev_dependencies:
   flutter_test:
