--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Trebesin_RC_Auto
+name: trebesin_rc_auto
 description: ovladač pro RC auto
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,6 +38,8 @@ dependencies:
   flutter_bluetooth_serial: ^0.4.0
   sensors_plus: ^3.1.0
   material_symbols_icons: ^4.2706.0
+  package_info_plus: ^4.2.0
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
